# speech-recognition

./: pyproject.toml
speech_recognition/: __init__.py  normalize.py
speech_recognition/recognizer/: __init__.py  base.py  vosk_recognizer.py  whisper_recognizer.py
